# ChangeLog for sci-misc/boinc
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/sci-misc/cvs-repo/gentoo-x86/sci-misc/boinc/ChangeLog,v 1.2 2005/05/24 16:39:35 cryos Exp $

  24 May 2005; Marcus D. Hanwell <cryos@gentoo.org> metadata.xml:
  Fix up metadata, thanks to squinky86 in bug 93744.

*boinc-4.32 (21 Apr 2005)
*boinc-4.19 (21 Apr 2005)

  21 Apr 2005; Marcus D. Hanwell <cryos@gentoo.org>
  +files/boinc-4.32_cmdline_options.patch,
  +files/boinc-4.32_socket_close_fix.patch, +files/boinc.conf,
  +files/boinc.init, +metadata.xml, +boinc-4.19.ebuild, +boinc-4.32.ebuild:
  Initial import, placed in p.mask for now during initial testing. Thanks go
  to Robert Moss <robmoss@gentoo.org> and Tony Murray <tonymurray@fastmail.fm>
  for the ebuilds and maintenance performed by Tony, as well as all the other
  contributors who helped with this ebuild. This closes bug 54962.
