@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sci-misc/cvs-repo/gentoo-x86/sci-misc/boinc/Attic/boinc-4.19.ebuild,v 1.1 2005/04/21 16:25:58 cryos Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sci-misc/cvs-repo/gentoo-x86/sci-misc/boinc/Attic/boinc-4.19.ebuild,v 1.2 2005/05/28 12:49:44 cryos Exp $
 
 inherit eutils
 
@@ -69,7 +69,7 @@ src_install() {
 
 pkg_preinst() {
 	enewgroup boinc
-	enewuser boinc -1 /bin/bash /var/lib/boinc boinc
+	enewuser boinc -1 /bin/false /var/lib/boinc boinc
 }
 
 pkg_postinst() {
