@@ -1,6 +1,10 @@
 # ChangeLog for sci-misc/boinc
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sci-misc/cvs-repo/gentoo-x86/sci-misc/boinc/ChangeLog,v 1.2 2005/05/24 16:39:35 cryos Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sci-misc/cvs-repo/gentoo-x86/sci-misc/boinc/ChangeLog,v 1.3 2005/05/28 12:49:44 cryos Exp $
+
+  28 May 2005; Marcus D. Hanwell <marcus@gentoo.org> boinc-4.19.ebuild,
+  boinc-4.32.ebuild:
+  Give the boinc user /bin/false as shell.
 
   24 May 2005; Marcus D. Hanwell <cryos@gentoo.org> metadata.xml:
   Fix up metadata, thanks to squinky86 in bug 93744.
